6.0.2 (not yet released):
- Update ODA to 1.4.
- [Ticket #519] Re-introduce the startover capability (via oscar-config
--startover command).
- Add the mysql support to OS_Settings and OSCAR::SystemServices.
- Fix a problem when detecting the NIC used by OSCAR in the network-check
script.
- Improve unit tests.
- Fix a bug in OS_Settings when falling back to the default settings.
- Update ORM to 1.2.1.
- Update SystemInstaller to 2.3.10.
- Improve the unit tests.
- Code clean-up.
- Prereqs: decrease the output by default.
- Prereqs: update the prereq API to make more coherent
- Update OS_Settings.
- Wizard GUI: make the "delete client" visible all the time.
- Port the management of the /etc/init.d/systemimager-server-monitord service
to OSCAR::SystemServices.
- Etend the Utils Perl module.
- Improve Perldoc documentation.
- Improve scripts output.
- Modify the Makefile so we can choose the directory where the binary packages
are stored.
- Enable the creation of unsigned Debian packages by setting the
UNSIGNED_OSCAR_PKG environment variable.

6.0.1:
- Add RPMs for OSCAR core on Fedora Core 9 (both i386 and x86_64).
- Update the RPM list for rhel-5-x86_64 and compatible distributions.
- Merge oscar-base.spec.in and oscar.spec.in.
- Clean up the Makefile portion related to the generation of RPMs for
oscar-base.
- Clean up the spec file for oscar-base.
- Update ODA to 1.3.5.
- Update PackMan to 3.1.5.
- Update Yume to 2.8.4.
- Update Selector to 1.0.2.
- During bootstrapping, a log file is now created 
(/var/log/oscar/bootstrap.log).
- Include two new options to the oscar-config script: debug and verbose.
- During bootstrapping, we install only one core OPKG at a time, to be able to
really get details on errors.
- Fix a bug when generating the DHCPD configuration file on Debian.
- New abstraction for the management of system services.
- Include capabilities for file management: download and type detection.