@@ -1,4 +1,5 @@
 6.0.2 (not yet released):
+- [Ticket #483] Remove code duplication between MAC.pm and MACops.pm.
 - Update ODA to 1.4.
 - [Ticket #519] Re-introduce the startover capability (via oscar-config
 --startover command).
